Reduce extraneous scrollbars in admin. Fixes #519

--- a/src/components/AdminPane/Manage/GridBlocks/BurndownChartBlock/BurndownChartBlock.scss
+++ b/src/components/AdminPane/Manage/GridBlocks/BurndownChartBlock/BurndownChartBlock.scss
@@ -1,5 +1,13 @@
 .burndown-chart-block {
   .burndown-chart {
     height: 375px;
+
+    div {
+      max-height: 100%;
+    }
+
+    svg {
+      max-height: 370px;
+    }
   }
 }
