--- a/src/components/AdminPane/Manage/GridBlocks/ChallengeOverviewBlock/ChallengeOverviewBlock.scss
+++ b/src/components/AdminPane/Manage/GridBlocks/ChallengeOverviewBlock/ChallengeOverviewBlock.scss
@@ -3,8 +3,15 @@
 .challenge-overview-block {
   .grid-block__content {
     .columns {
-      margin-bottom: 0;
-      margin-left: -0.25em;
+      margin: -0.5em 0;
+
+      &:first-child {
+        margin-top: 0;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
 
       .column {
         padding: 0.25em;
